eks/manifests/django/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-django-api-service
  namespace: dev-sample-postgres
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app: dev-django-api
